tests/suite/snapshots/suite__parse__tests__parse__bad-array-dim-assign1.xi.snap
---
source: tests/suite/parse.rs
assertion_line: 36
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/bad-array-dim-assign1.xi:3:5]
   │
 3 │     a:int[2] = {2}
   ·     ────┬───  
   ·         ╰───── Unexpected length in array type
───╯

